L10n: Whoops i just left some test strings

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -49,8 +49,8 @@
 
 "years_zero" = "0 лет";
 "years_one" = "1 год";
-"years_few" = "$1 года фю";
-"years_many" = "$1 лет мани";
+"years_few" = "$1 года";
+"years_many" = "$1 лет";
 "years_other" = "$1 лет";
 
 "relationship" = "Семейное положение";
