--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -124,6 +124,7 @@
 "wall_few" = "$1 записи";
 "wall_many" = "$1 записей";
 "wall_other" = "$1 записей";
+"view_other_comments" = "Посмотреть остальные комментарии";
 
 "all_news" = "Все новости";
 "posts_per_page" = "Количество записей на странице";
