--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -553,7 +553,7 @@
 "support_new" = "Новое обращение";
 
 "support_faq_title" = "Для кого этот сайт?";
-"support_faq_content" = "Сайт предназначен для поиска друзей и знакомых, а также просмотр данных пользователя. Это как справочник города, с помощью которого люди могут быстро найти актуальную информацию о человеке.";
+"support_faq_content" = "Сайт предназначен для поиска друзей и знакомых, а также для просмотра данных пользователя. Это как справочник города, с помощью которого люди могут быстро найти актуальную информацию о человеке.";
 
 "support_new_title" = "Введите тему вашего обращения";
 "support_new_content" = "Опишите проблему или предложение";
