--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -553,7 +553,7 @@
 "support_new" = "Нове звернення";
 
 "support_faq_title" = "Для кого цей сайт?";
-"support_faq_content" = "Сайт призначений для пошуку друзів і знайомих, а також для перегляду даних користувача. Це як довідник міста, за допомогою якого люди можуть швидко знайти актуальну інформацію про людину.";
+"support_faq_content" = "Сайт призначений для пошуку друзів і знайомих, а також для перегляду даних користувачів. Це як довідник міста, за допомогою якого люди можуть швидко знайти актуальну інформацію про людину.";
 
 "support_new_title" = "Введіть тему вашого звернення";
 "support_new_content" = "Опишіть проблему або пропозицію";
