Kazakh: fix information_about string

--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -93,7 +93,7 @@
 "favorite_shows" = "Сүйікті телешоудар";
 "favorite_books" = "Сүйікті кітаптар";
 "favorite_quotes" = "Сүйікті дәйексөздер";
-"information_about" = "Өзім туралы";
+"information_about" = "Өзі туралы";
 
 "updated_at" = "Соңғы жаңартылған: $1";
 
