Readme: Replace old instance with active one

--- a/README.textile
+++ b/README.textile
@@ -13,7 +13,7 @@ Updating the source code is done with this command: @git pull --recurse-submodul
 h2. Instances
 
 * *"openvk.su":https://openvk.su/*
-* "openvk.zavsc.pw":http://openvk.zavsc.pw/
+* "social.fetbuk.ru":http://social.fetbuk.ru/
 
 h2. Can I create my own OpenVK instance?
 
