--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -613,6 +613,7 @@
 "error_old_password" = "Старый пароль не совпадает";
 "error_new_password" = "Новые пароли не совпадает";
 "error_shorturl_incorrect" = "Короткий адрес имеет некорректный формат.";
+"error_repost_fail" = "Не удалось поделиться записью";
 
 "forbidden" = "Ошибка доступа";
 "forbidden_comment" = "Настройки приватности этого пользователя не разрешают вам смотреть на его страницу.";
@@ -623,6 +624,8 @@
 "photo_saved" = "Фотография сохранена";
 "photo_saved_comment" = "Новое изображние профиля появится у вас на странице";
 
+"shared_succ" = "Запись появится на вашей стене. Нажмите на уведомление, чтобы перейти к своей стене.";
+
 /* Admin actions */
 
 "login_as" = "Войти как $1";
@@ -630,8 +633,19 @@
 "ban_user_action" = "Заблокировать пользователя";
 "warn_user_action" = "Предупредить пользователя";
 
-/* Paginator */
+/* Paginator (deprecated) */
 
 "paginator_back" = "Назад";
 "paginator_page" = "Страница $1";
 "paginator_next" = "Дальше";
+
+/* Dialogs */
+
+"ok" = "ОК";
+"yes" = "Да";
+"no" = "Нет";
+"cancel" = "Отмена";
+"edit_action" = "Изменить";
+
+"warning" = "Внимание";
+"question_confirm" = "Это действие нельзя отменить. Вы действительно уверены в том что хотите сделать?";
