Groups: Add the ability to write comments on behalf of the group

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -129,6 +129,7 @@
 
 "attachment" = "Attachment";
 "post_as_group" = "Post as group";
+"comment_as_group" = "Comment as group";
 "add_signature" = "Add signature";
 /* ^ can be translated as "author's signature". ^ */
 "contains_nsfw" = "Contains NSFW content";
