--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -132,6 +132,7 @@
 
 "attachment" = "Вложение";
 "post_as_group" = "От имени сообщества";
+"comment_as_group" = "От имени сообщества";
 "add_signature" = "Подпись автора";
 "contains_nsfw" = "Содержит NSFW-контент";
 "nsfw_warning" = "Данный пост может содержать 18+ контент";
